syntax = "proto3";
package hyperlane.mailbox.v1;

option go_package = "github.com/KYVENetwork/hyperlane-cosmos/x/mailbox/types";

import "cosmos_proto/cosmos.proto";

message Dispatch {
  int64 message_id = 1;
  int64 mailbox_id = 2;
  string sender = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string receiver = 4;
  bytes message = 5;
}